--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -10,19 +10,25 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["nextjs", "react", "typescript", "data ingestion", "AI"],
+  "keywords": [
+    "nextjs",
+    "react",
+    "typescript",
+    "data ingestion",
+    "AI"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "10.0.3",
+    "next": "^10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
-    "typescript": "^4.1.3",
     "eslint": "^7.14.0",
-    "eslint-config-next": "^10.0.3"
+    "eslint-config-next": "^10.0.3",
+    "typescript": "^4.1.3"
   }
 }
