--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -20,15 +20,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
+    "mongodb": "^5.7.0",
     "next": "^10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.31",
+    "@types/node": "^14.18.54",
+    "@types/react": "^17.0.62",
     "eslint": "^7.14.0",
     "eslint-config-next": "^10.0.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.5"
   }
 }
